[package]
name = "advent_of_code"
version = "2020.0.1"
authors = ["Chris Foster <cdbfoster@gmail.com>"]

[[bin]]
name = "d01p1"

[[bin]]
name = "d01p2"

[[bin]]
name = "d02p1"

[[bin]]
name = "d02p2"

[[bin]]
name = "d03p1"

[[bin]]
name = "d03p2"

[[bin]]
name = "d04p1"

[[bin]]
name = "d04p2"

[[bin]]
name = "d05p1"

[[bin]]
name = "d05p2"

[[bin]]
name = "d06p1"

[[bin]]
name = "d06p2"

[[bin]]
name = "d07p1"

[[bin]]
name = "d07p2"

[[bin]]
name = "d08p1"

[[bin]]
name = "d08p2"

[[bin]]
name = "d09p1"

[[bin]]
name = "d09p2"

[[bin]]
name = "d10p1"

[[bin]]
name = "d10p2"

[[bin]]
name = "d11p1"

[[bin]]
name = "d11p2"

[[bin]]
name = "d12p1"

[[bin]]
name = "d12p2"

[dependencies]
regex = "*"